Edited wiki page through web user interface.

--- a/wiki/conventions.wiki
+++ b/wiki/conventions.wiki
@@ -1,4 +1,5 @@
 #summary Describes the conventions that are used in gpExport's code.
+#labels Phase-Implementation
 
 = Coding Style and Conventions =
 
